[package]
name = "yacc"
version = "0.1.0"
edition = "2021"
authors = ["Ns2Kracy <22204969377@qq.com>"]
description = "Yet Another CasaOS CLI implemented with Rust"
readme = "README.md"
keywords = ["casaos", "cli"]
license = "Apache-2.0"
repository = "https://github.com/Ns2Kracy/yacc"
documentation = "https://wiki.casaos.io"
homepage = "https://casaos.io"

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.2.1", features = ["derive", "env"] }
clap_complete = "4.2.0"
console = "0.15.5"
lazy_static = "1.4.0"
mime = "0.3.17"
reqwest = "0.11.16"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
serde_yaml = "0.9.19"
tar = "0.4.38"
thiserror = "1.0.40"
