[package]
name = "yacc"
version = "0.1.2"
edition = "2021"
authors = ["Ns2Kracy <22204969377@qq.com>"]
description = "Yet Another CasaOS CLI implemented with Rust"
readme = "README.md"
keywords = ["casaos", "cli"]
license = "Apache-2.0"
repository = "https://github.com/Ns2Kracy/yacc"
documentation = "https://wiki.casaos.io"
homepage = "https://casaos.io"

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.2.1", features = ["derive", "env"] }
console = "0.15.5"
dialoguer = "0.10.4"
indicatif = { version = "0.17.4", features = ["improved_unicode"] }
rand = "0.8.5"
reqwest = "0.11.16"
serde = { version = "1.0.159", features = ["derive"] }
sys-info = "0.9.1"
tokio = { version = "1.28.2", features = ["full"] }
