[package]
name = "yacc"
version = "0.1.4"
edition = "2021"
authors = ["Ns2Kracy <22204969377@qq.com>"]
description = "Yet Another CasaOS CLI implemented with Rust"
readme = "README.md"
keywords = ["casaos", "cli"]
license = "Apache-2.0"
repository = "https://github.com/Ns2Kracy/yacc"
documentation = "https://wiki.casaos.io"
homepage = "https://casaos.io"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.2.1", features = ["derive", "env"] }
console = "0.15.5"
dialoguer = "0.10.4"
flate2 = "1.0.26"
fs_extra = "1.3.0"
futures = "0.3.28"
indicatif = "0.17.4"
lazy_static = "1.4.0"
reqwest = { version = "0.11.16", features = ["blocking", "json"] }
rust-ini = "0.19.0"
serde_json = "1.0.99"
sys-info = "0.9.1"
tar = "0.4.38"
tempfile = "3.6.0"
tokio = { version = "1.28.2", features = ["rt", "macros", "fs"] }
walkdir = "2.3.3"
